check email endpoint
